tests/reference/asr-array_size_04-78e37a1.stderr
semantic error: Unrecognized keyword argument kind1 passed to size intrinsic.
 --> tests/errors/array_size_04.f90:5:14
  |
5 |     size_a = size(a, kind1=4, dim1=1)
  |              ^^^^^^^^^^^^^^^^^^^^^^^^ 
